# moleculekit

./: .gitattributes  .gitignore  .travis.yml  AGENTS.md  CONTRIBUTORS.md  DEPENDENCIES  MANIFEST.in  Makefile  README.md  azure-pipelines.yml  codecov.yml  extra_requirements.txt  flake8-docstrings.cfg  lgtm.yml  makerelease.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  update_license_header.py  voxelization_example.py
.codeboarding/: Cheminformatics & Cloud Integration.md  Core Molecular Data Model.md  Data Management & I-O.md  Foundational Utilities & Atom Selection.md  Molecular Analysis & Simulation Preparation.md  Visualization & User Interaction.md  on_boarding.md
.github/workflows/: docs.yml  publish.yml  publish_conda.yml  pyodide_build.yml  test.yml  test_and_publish.yml  workflow.yml
ci/: insert_placeholder_values.py
ci/azure/: build-wheels.sh  build_artifact_job.yml  pipelines.yml  test.yml  test_job.yml
ci/travis/: compile_htmdlib.sh  conda_upload.sh  deploy.sh  insert_placeholder_values.py  install_miniconda.sh
doc/: Makefile  getversion.py
doc/source/: .gitignore  conf.py  index.md  index.rst  installation.md  installation.rst  llms.txt  modules.rst  moleculetools.rst  molstar_viewer.rst  projections.rst  tutorials.rst
docker/: README.md
docker/google_batch/: config.sh  googlebatchwrapper.py  recipe  setup.sh  test.py  test.sh  workflow.yaml
docker/pyodide/: Dockerfile  build.sh
docker/recipe/: Dockerfile  build.sh  env.yaml  execute.sh  test.py
docker/test/: myscript.py
examples/: molstar_viewer_demo.py
moleculekit/: __init__.py  _version.py  align.py  bondguesser.py  config.py  dihedral.py  distance.py  guessbonds.py  home.py  logging.ini  molecule.py  openmmtools.py  opm.py  periodictable.py  pymolgraphics.py  pymolviewer.py  rcsb.py  rdkitintegration.py  rdkittools.py  readers.py  representations.py  residues.py  support.py  unitcell.py  util.py  version.py  viewer.py  vmdgraphics.py  vmdparser.py  vmdviewer.py  wrap.py  writers.py
moleculekit/atomselect/: _languageparser.py  analyze.py  atomselect.py  languageparser.py
moleculekit/atomselect_utils/: .gitignore  atomselect_utils.c  atomselect_utils.cpp  atomselect_utils.html  atomselect_utils.pyx
moleculekit/bondguesser/: bondguesser.pyx
moleculekit/bondguesser_utils/: .gitignore  bondguesser_utils.cpp  bondguesser_utils.pyx
moleculekit/cython_utils/: cython_utils.pyx
moleculekit/distance_utils/: distance_utils.pyx
moleculekit/fileformats/: netcdf.py  utils.py
moleculekit/interactions/: .gitignore  interactions.py
moleculekit/kdtree/: README.md  __init__.py  _ckdtree.cpp  _ckdtree.pyx
moleculekit/molstar_grpc/: molstar_pb2.py  molstar_pb2_grpc.py
moleculekit/occupancy_utils/: occupancy_utils.pyx
moleculekit/ply/: __init__.py  lex.py  yacc.py
moleculekit/projections/: metriccoordinate.py  metricdihedral.py  metricdistance.py  metricfluctuation.py  metricgyration.py  metricplumed2.py  metricrmsd.py  metricsasa.py  metricsecondarystructure.py  metricshell.py  metricsphericalcoordinate.py  metrictmscore.py  projection.py  util.py
moleculekit/share/: ALA.cif  backbone.cif
moleculekit/smallmol/: README.md  smallmol.py  smallmolcdp.py  smallmollib.py  test_smallmol.py  test_smallmollib.py  util.py
moleculekit/tests/: test_collision_issue.py  test_import_time.py
moleculekit/tmalign/: tmalign_util.pyx  tmalignlib.pxd
moleculekit/tools/: _anchor_variants.py  atomtyper.py  atomtyper_utils.py  autosegment.py  backbone.py  build_customres.py  crystalpacking.py  detect.py  docking.py  graphalignment.py  hhblitsprofile.py  interactions.py  ligand_classifier.py  md_simulator.py  modelling.py  moleculechecks.py  mutate.py  nonstandard_residues.py  pka.py  preparation.py  preparation_customres.py  preparationdata.py  prot_prep.py  sequencestructuralalignment.py  system_builder.py  train_xgboost.py  voxeldescriptors.py
moleculekit/viewer/: __init__.py
moleculekit/wrapping/: wrapping.pyx
moleculekit/xtc_utils/: .gitignore  xtc.pyx  xtclib.pxd
molkitten/: setup.py
package/htmdmol/: meta.yaml
package/moleculekit/: bld.bat  build.bat  build.sh  conda_build_config.yaml  insert_placeholder_values.py  meta.yaml  recipe_template.yaml  variants.yaml  windows_variants.yaml
test_cpp/: hbonds.pyx  setup.py
test_wasm/: .gitignore  index.html  moleculekit-1.3.5-cp310-cp310-emscripten_3_1_14_wasm32.whl
tests/: .gitignore  conftest.py  dodecahedral_box  test_atomselect.py  test_atomtyper.py  test_autosegment.py  test_bondguesser.py  test_crystalpacking.py  test_detect.py  test_distance.py  test_docking.py  test_graphalignment.py  test_importtime.py  test_interactions.py  test_metriccoordinate.py  test_metricdihedral.py  test_metricdistance.py  test_metricfluctuation.py  test_metricgyration.py  test_metricplumed2.py  test_metricrmsd.py  test_metricsasa.py  test_metricsecondarystructure.py  test_metricshell.py  test_metricsphericalcoordinate.py  test_metrictmscore.py  test_molecule.py  test_moleculechecks.py  test_molstar_inline.py  test_molstar_mvs.py  test_molstar_registry.py  test_molstar_serialize.py  test_molstar_server.py  test_mutate.py  test_nonstandard_residues.py  test_opm.py  test_pdbxreader.py  test_pdbxreadwrite.py  test_pdbxwriter.py  test_periodictable.py  (+14 more)
tests/pdb/: 3ptb.cif  6a5j.cif
tests/test-detect/: BEN_pH7.4.sdf  glycol.mol2
tests/test_atomselect/: selections.pickle
tests/test_bondguesser/: 1bna.csv  1unc.csv  3hyd.csv  3ptb.csv  (+3 more)
tutorials/: voxelization_tutorial.ipynb
viewer-frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+449 files in other folders)
