[project]
name = "moleculekit"
description = "A molecule reading/writing and manipulation package."
authors = [{ name = "Stefan Doerr", email = "s.doerr@acellera.com" }]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "numpy>=1.23.5",
  "pandas>=1.1.2",
  "networkx",
  "tqdm",
  "msgpack",
  "requests",
]

[project.urls]
"Homepage" = "https://github.com/Acellera/moleculekit"
"Bug Tracker" = "https://github.com/Acellera/moleculekit/issues"

[tool.setuptools.packages.find]
include = ["moleculekit*"]

[tool.setuptools.package-data]
"moleculekit.share" = ["*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.c", "*.cpp", "*.h", "*.pyx", "*.pxd", ".gitignore"]

[tool.setuptools_scm]

[build-system]
requires = [
  "setuptools",
  "numpy>=2.0.0rc1",
  "Cython>=0.29.21",
  "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
python_files = "*.py"
python_classes = "_Test"
python_functions = "_test*"
norecursedirs = "test-data"


[tool.cibuildwheel]
skip = ["pp*"]  # Disable PyPy builds due to Cython
test-requires = "pytest"
test-command = "pytest tests/"