[project]
name = "moleculekit"
description = "A molecule reading/writing and manipulation package."
authors = [{ name = "Stefan Doerr", email = "s.doerr@acellera.com" }]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "numpy>=1.23.5",
  "pandas>=1.1.2",
  "networkx",
  "tqdm",
  "msgpack",
  "requests",
  "matplotlib",
  "rdkit>=2020.09.5",
  "mdtraj",
  "propka",
  # "openbabel>=3.1.1",
  "pdb2pqr>=3.5.3",
  "biopython"
]

[project.urls]
"Homepage" = "https://github.com/Acellera/moleculekit"
"Bug Tracker" = "https://github.com/Acellera/moleculekit/issues"

[tool.setuptools.packages.find]
include = ["moleculekit*"]

[tool.setuptools.package-data]
"moleculekit.share" = ["*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.c", "*.cpp", "*.h", "*.pyx", "*.pxd", ".gitignore"]

[tool.setuptools_scm]

[build-system]
requires = [
  "setuptools",
  "numpy>=2.0.0rc1",
  "Cython>=0.29.21",
  "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
python_files = "*.py"
python_classes = "_Test"
python_functions = "_test*"
norecursedirs = "test-data"


[tool.cibuildwheel]
skip = ["pp*", "*win32"]  # Disable PyPy builds due to Cython. Disable Windows 32 builds due to rdkit not existing
test-requires = ["pytest", "pytest-xdist"]
test-command = "pytest -n auto {project}/tests"
# build-frontend = "build[uv]"