[project]
name = "moleculekit"
description = "A molecule reading/writing and manipulation package."
authors = [{ name = "Stefan Doerr", email = "s.doerr@acellera.com" }]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "numpy>=1.23.5",
  "pandas>=1.1.2",
  "networkx",
  "tqdm",
  "msgpack",
  "requests",
  "matplotlib",
  "rdkit>=2020.09.5",
  "mdtraj",
  "propka",
  # "openbabel>=3.1.1",
  "pdb2pqr>=3.5.3",
  "biopython",
]

[project.urls]
"Homepage" = "https://github.com/Acellera/moleculekit"
"Bug Tracker" = "https://github.com/Acellera/moleculekit/issues"

[tool.setuptools.packages.find]
include = ["moleculekit*"]

[tool.setuptools.package-data]
"moleculekit.share" = ["**/*"]
"moleculekit.viewer.molstar" = ["static/**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.c", "*.cpp", "*.cxx", "*.h", "*.pyx", "*.pxd", ".gitignore"]

[tool.setuptools_scm]

[build-system]
requires = [
  "setuptools",
  "numpy>=2.0.0rc1",
  "Cython>=0.29.21",
  "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
openmm = [
  "nvidia-cuda-cupti-cu12<12.7",
  "nvidia-cuda-nvcc-cu12<12.7",
  "nvidia-cuda-nvrtc-cu12<12.7",
  "nvidia-cuda-runtime-cu12<12.7",
  "nvidia-nvjitlink-cu12<12.7",
  "openmm[cuda12]>=8.5.0",
]

[dependency-groups]
test = ["pytest>=8.4.2", "pytest-xdist", "jupytext", "nbclient", "ipykernel"]
docs = [
  "sphinx",
  "pydata-sphinx-theme",
  "myst-nb",
  "sphinx-design",
  "sphinx-copybutton",
  "sphinxcontrib-mermaid",
  "sphinx-autodoc-typehints",
  "sphinx-argparse",
  "sphinx-notfound-page",
  "sphinx-sitemap",
]
dev = [{ include-group = "test" }, "ipython>=8.18.1"]

[tool.uv]
# pdb2pqr 3.6.x pins docutils<0.18 but Sphinx needs newer; pdb2pqr works fine at runtime
# with current docutils, so override the constraint.
override-dependencies = ["docutils>=0.20"]

[tool.pytest.ini_options]
python_functions = "_test*"
testpaths = ["tests"]


[tool.cibuildwheel]
# Disable PyPy builds due to our Cython code not being compatible with it yet
# Disable Windows 32 builds, Musllinux builds due to rdkit not building on it
# Disable i686, ppc64le, s390x, universal2, armv7l due to numpy not building on them
skip = [
  "cp314*",             # Propka has a bug with Python 3.14. Remove at next release >3.5.1
  "pp*",
  "*win32",
  "*armv7l",
  "*_i686",
  "*_ppc64le",
  "*_s390x",
  "*_universal2",
  "*musllinux_x86_64",
  "*musllinux_aarch64",
]
test-requires = ["pytest", "pytest-xdist"]
test-command = "pytest -n auto {project}/tests"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
# build-frontend = "build[uv]"
